# NESEmulator

./: CMakeLists.txt  TODO.txt  basics.cpp  basics.h  cpu.cpp  datapath.cpp  instructions.cpp  instructions.h  main.cpp  model.cpp  state.cpp  state.h
src/core/: basics.h  cpu.cpp  instructions.cpp  main.cpp  state.cpp  state.h
tests/: sample.asm
